Devoxx - spelling errors

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -16,12 +16,12 @@ in main conference room.]
 
 ### About conference
 
-Thanks to my employeer [CyberVadis](https://cybervadis.com/) I was able to
+Thanks to my employer [CyberVadis](https://cybervadis.com/) I was able to
 attend Devoxx Poland 2018 conference. The conference took place in
 Cracow (Poland) and lasted three days (20 - 22 June).
 
 Overall my experience with the conference was very good.
-Things that I particulary liked were: good coffee, tasty muffins and
+Things that I particularly liked were: good coffee, tasty muffins and
 beautiful and very comfortable venue ([Cracow ICE](http://www.icekrakow.pl/)).
 
 Things that organisers could have done better: on the first day of the 
@@ -37,7 +37,7 @@ The speaker Mr. Brian Christian told us about application of
 theoretical computer science stuff to everyday problems.
 Presentation was based on Mr. Brian book 
 [Algorithms to Live By](http://a.co/dYsQtCb).
-I already orderd my own copy ;)
+I already ordered my own copy ;)
 
 
 ### My notes from presentations
@@ -57,10 +57,10 @@ my colleagues that couldn't attend the conference. Use them at your own risk.
  objects when we only need
  to check number of objects (we are just calling `.size()` on the list)
  can cause performance bottlenecks when we are using ORM to persist
- our aggragates.
-- Persisting aggragate state as a list of events is not only simpler
+ our aggregates.
+- Persisting aggregate state as a list of events is not only simpler
  but also much more aligned with DDD design.
-- You should prefer returning domain events from aggragate instead of
+- You should prefer returning domain events from aggregate instead of
  publishing them (no more `EventPublisher`s in aggregates). For example:
 
 {% highlight java %}
@@ -101,19 +101,19 @@ aggr.performOperation();
 repo.save(aggr);
 {% endhighlight %}
 
-This method of returning events from aggragate root is nothing new.
-Variations of this apporach apeared as earliy as in 2013, [for example here](https://blog.jayway.com/2013/06/20/dont-publish-domain-events-return-them/).
+This method of returning events from aggregate root is nothing new.
+Variations of this approach appeared as early as in 2013, [for example here](https://blog.jayway.com/2013/06/20/dont-publish-domain-events-return-them/).
 
-- (My question after talk) You should not confuse domin events used
- to store aggragate state from integration events. Generally it is a
+- (My question after talk) You should not confuse domain events used
+ to store aggregate state from integration events. Generally it is a
  bad practice to publish to other systems events used to persist aggregate.
- Mostly because you may expose state that should be private to aggragate.
+ Mostly because you may expose state that should be private to aggregate.
 
 - (My question after talk) How to deal with GDPR when using immutable
  event store? You should try to keep sensitive data outside of domain events.
- Later I checked that this apporach was described [here](https://twitter.com/mathiasverraes/status/927484596396199937?lang=en). 
+ Later I checked that this approach was described [here](https://twitter.com/mathiasverraes/status/927484596396199937?lang=en). 
 
-As an alternative apporach you may use encryption as described [here](https://www.michielrook.nl/2017/11/forget-me-please-event-sourcing-gdpr/).
+As an alternative approach you may use encryption as described [here](https://www.michielrook.nl/2017/11/forget-me-please-event-sourcing-gdpr/).
 But for some reason I find this solution ugly.
 
 - (Someone else's question) It is fine to use SQL databases to store domain events (at least at the
@@ -142,7 +142,7 @@ Introducing Chaos Engineering into organisation:
 - First make your application resilient then test that resiliency.
  Do NOT do Chaos Engineering experiments in production that you are sure
  will kill your app.
-- Test not only infrastucture but also people. If say Bob
+- Test not only infrastructure but also people. If say Bob
  solves 90% of problems on production, check what will happen if other
  team members must solve such problems without Bob.
 
@@ -157,12 +157,12 @@ Increasing resiliency:
  six nines is 99.9999% of time on which application works.
 - four-nines is an industry standard (as of 2018)
 - Easiest way to increase availability is to create multiple copies of
- the least reliable resorces. If for example you have a single 
+ the least reliable resources. If for example you have a single 
  server that has 90% of 
  availability, having two such servers working in parallel 
  will create a system with availability of 99%.
 - When you are hosting your apps in the cloud remember to use multiple 
- availibility zones (AWS lingo).
+ availability zones (AWS lingo).
 - Use auto-scaling.
 - Follow infrastructure as code approach to achieve testable infrastructure.
 - Your infrastructure should be immutable. Never update servers always
@@ -173,24 +173,24 @@ Increasing resiliency:
  will allow you to quickly rollback your changes.
 - Never put all your databases on the same server. Use sharding to spread
  data across many databases.
-- Prefer messaging to HTTP requests, message queues are more resillient.
+- Prefer messaging to HTTP requests, message queues are more resilient.
  Send commands instead of issuing HTTP requests.
 - When using HTTP remember to use circuit breaker library.
- Use exponential backoff alogirthm.
+ Use exponential backoff algorithm.
 - Remember about DNS (DNS failover, smart load balancing).
-- Transcient state is a state that is constantly changing, like
- webpage view counters or ad clicks counters. Do not put transcient 
+- Transient state is a state that is constantly changing, like
+ webpage view counters or ad clicks counters. Do not put transient 
  state into database, 
  instead use specialized solutions like Redis to keep it.
 - Use async UI, do not wait for operation to finish, display notification
- to the user when opperation succedes or fails. See: 
+ to the user when operation succeeds or fails. See: 
  [Stop Getting In My Way! — Non-blocking UX](https://medium.com/@sophie_paxtonUX/stop-getting-in-my-way-non-blocking-ux-5cbbfe0f0158)
 
 Chaos Engineering in Practice:
 
 - Chaos Engineering is like a fire drills. You are doing it so that
  people will be prepared for a real fire and will not panic.
-- Without excecisses people will get scary when dealing with real issues
+- Without exercises people will get scary when dealing with real issues
  on production.
 - How to start? Start by defining *steady state* of your application.
  In other words define when you assume that your application is working.
@@ -213,8 +213,8 @@ Chaos Engineering in Practice:
 - Quantify results. How much time elapsed from the failure to detection of 
  that failure? How much time did it take to fix it?
  Is our monitoring working properly? Does notification (pager duty) system
- works corectly?
-- Never blame a single person, instead concentracte on things that 
+ works correctly?
+- Never blame a single person, instead concentrate on things that 
  you can improve.
 
 General tips:
@@ -228,7 +228,7 @@ General tips:
  break your application.
  Remember chaos reveals problems not causes them.
 
-Overall this was a very good presentation with a bit of AWS advertisment.
+Overall this was a very good presentation with a bit of AWS advertisement.
 
 You can find Adrian Hornsby twitter here:
 
@@ -242,7 +242,7 @@ You can find Adrian Hornsby twitter here:
   * Change in one microservice propagates to others
     e.g. I return additional field from some REST endpoint in service A,
      but may application will start working only when I recompile service B.
-  * There is too much comunications going on between teams.
+  * There is too much communication going on between teams.
   * Change in service A that is managed by my team requires approval from
     some other team
 - When working with microservices Don't Repeat Yourself rule is considered
@@ -260,7 +260,7 @@ You can find Adrian Hornsby twitter here:
  This breaks service B maintained by team B that is using SuperXmlParser-v1.0 library.
 - When using microservice architecture role of software architect changes.
  Architect no longer can enforce his decisions on teams. Instead teams are
- self organizing and cross functional and they ultimatelly decide on the design 
+ self organizing and cross functional and they ultimately decide on the design 
  and architecture of the services that they own.
 - Software architect should concentrate on high level concerns like security,
  integration with other applications and best practices. Think BIG PICTURE!
@@ -270,8 +270,8 @@ You can find Adrian Hornsby twitter here:
  different microservices (this is one of the selling points of the
  microservice architecture after all).
 - Teams should be aligned with bounded context. Teams should have a deep
- knowledge of thier domains. Therefore teams are best equipped to make
- architectural decisions. This is the best usage of the top talend that
+ knowledge of their domains. Therefore teams are best equipped to make
+ architectural decisions. This is the best usage of the top talent that
  you have hired.
 - Avoid nanoservices (service that does the job of a single method).
 - Do not rush into microservices. Think if you really needs benefits that
@@ -288,13 +288,13 @@ It was based on personal experiences of Mr. Dominik. Good Job!
 - A few more attributes of modern software company: short feedback loops,
  constant improvement (thank to feedback), autonomous teams, decentralized
  decision making, individual impact (every one feels that his job is important
- and that this person contributes significantly to the sucess of company).
+ and that this person contributes significantly to the success of company).
 - In other words: Customer becomes the new boss.
 - How to impress your new boss? Deliver great stuff!
 - Check out [How Google Works](http://a.co/93Pp6BM) book.
  It uses term *Smart creatives* to define modern knowledge workers.
  Smart creatives are not only tech but also business savvy.
- They are open, passionante persons that strive to learn something new
+ They are open, passionate persons that strive to learn something new
  every day. (My note: this sounds like some old school hackers to me).
 - Smart creatives like to work on interesting problems.
  They also like to work with interesting people. They often
@@ -302,15 +302,15 @@ It was based on personal experiences of Mr. Dominik. Good Job!
 - Negativity destroys people. It also destroys people's brains - so please
  don't be negative.
 - Check out [Pragmatic Thinking and Learning](https://pragprog.com/book/ahptl/pragmatic-thinking-and-learning) book
-- (My note: more motivational $#@!, I have nothing agains it but I think this is
+- (My note: more motivational $#@!, I have nothing against it but I think this is
  not based on any scientific studies. It is just pop-psychology stuff 
- so belive it or not). Success is 10% talent, 90% hard work.
+ so believe it or not). Success is 10% talent, 90% hard work.
  Hard work beats talent when talent fails to work hard.
 - Anyone who stops learning is already OLD (my note: I should better learn something
  from this presentation).
-- Growth mindset. Prise for efford not for results (my note: more pop-psychology).
+- Growth mindset. Prise for effort not for results (my note: more pop-psychology).
 
-Questions for job interview that can test if peron has growth mindset
+Questions for job interview that can test if person has growth mindset
 and is a good candidate to become smart creative:
 
 - What have you learned in your current job?
@@ -342,13 +342,13 @@ Back to main topic again:
 - Be the weakest person in the room (so that you will learn quickly).
 - Being the best person in the room is bad for your professional development.
  You may not learn as much as you can.
-- 1 year in a fast peaced environment is often better than 5+ years of experience
+- 1 year in a fast-paced environment is often better than 5+ years of experience
  in an average company.
 
 More job interview questions:
 
-- What is your best professional achievment?
-- What is your top strenght?
+- What is your best professional achievement?
+- What is your top strength?
 - What is your weakest point as a professional software developer?
 - What are you doing about it?
 - Why did you choose software development as your career?
@@ -361,8 +361,8 @@ Back to main topic again:
 - Passion is very important for smart creatives. Passion gives you intrinsic 
  motivation. Curiosity will force you to learn new things. Desire to change
  the words will make it happen.
-- Modern software house is sliced verticaly. Every team owns parts of the product
- and can do support, maintanance and  development. 
+- Modern software house is sliced vertically. Every team owns parts of the product
+ and can do support, maintenance and  development. 
  Also each team can talk directly with the client and make it's own
  decisions.
 
@@ -378,7 +378,7 @@ Mr. Wojciech [Twitter](https://twitter.com/wseliga?lang=en).
 - Apply UX techniques like [personas](https://en.wikipedia.org/wiki/Persona_(user_experience)) and [user journey mapping](https://boagworld.com/usability/customer-journey-mapping/) to the documentation.
 - Do not put code snippets into documentation. Instead link to a real 
  test or program source code. Especially linking to tests source code is
- adviced, this way documentation will always will be up to date.
+ advised, this way documentation will always will be up to date.
 - A lot of tools like [AsciiDoc](http://mrhaki.blogspot.com/2014/04/awesome-asciidoc-include-partial-parts.html) can already do this.
 - Writing a documentation should be a pleasure for developers.
 - Example: library of React components was created as a React application.
@@ -429,7 +429,7 @@ The solution:
 
 Towards better tests:
 
-- Use business names (ubiquitus language) in the tests (and tests names too).
+- Use business names (ubiquitous language) in the tests (and tests names too).
 - Hide unnecessary information from test code (you should only show information
  that are relevant for this particular test).
 - For each module create utility classes that provide real-like test data.
@@ -437,7 +437,7 @@ Towards better tests:
 - Prefer code to frameworks like Cucumber (business people don't use it anyway).
 - Spock is a very good testing framework for Java.
 - You may use shared immutable (read only) DB with test data to test 
- e.g. repositories - this way you can speed up your intergration tests.
+ e.g. repositories - this way you can speed up your integration tests.
 
 Mr. Jakub Nabrdalik twitter and blog:
 
@@ -452,9 +452,9 @@ please see his [demo project](https://github.com/jakubnabrdalik/hentai) on GitHu
 For this presentation I will not provide notes. Instead I am going to 
 express my views on arguments used by Mr. Sander.
 
-Mr. Sander belives that developing applications using microservice
-architecture is much more diffuclt than developing a monolithic software.
-Also Mr. Sander belives that microservice architecture moves so called
+Mr. Sander believes that developing applications using microservice
+architecture is much more difficult than developing a monolithic software.
+Also Mr. Sander believes that microservice architecture moves so called
 "wall of unmaintainability" further from us (we may add more features to
 the application before it becomes unmaintainable in therms of cost).
 I fully agree with these both statements.
@@ -462,10 +462,10 @@ I fully agree with these both statements.
 Now the things that I disagree with. Mr. Sander proposes a modular architecture
 (monolith split into modules) as a silver bullet that will allow us to reap
 most of the benefits of microservices will still preserving simplicity of
-development. Unfortunatelly in his presentation some disadvantages of this
-aproach were not mentioned, like:
+development. Unfortunately in his presentation some disadvantages of this
+approach were not mentioned, like:
 
-- Slow build and testing. Slow deploy. (It is still a monolit just with a better
+- Slow build and testing. Slow deploy. (It is still a monolith just with a better
  code organization.)
 - A minor error in a single unimportant module 
  can break entire application.
@@ -477,28 +477,28 @@ aproach were not mentioned, like:
  a single database server (possibly with read replicas). 
  As writes will be server by a single server instance this may cause 
  severe performance problems in the future.
-- Entire application must be writeen in the same technology (JVM, .NET, node.js).
+- Entire application must be written in the same technology (JVM, .NET, node.js).
 - Usually in monolithic applications people have a kind of Core or Platform 
  (or Commons or whatever) library that contains utils and shared components.
  This kind of libraries have a tendency to grow uncontrollably 
  and over time they become difficult to change
- (beacuse any change to them requires a lot of refactoring in several modules).
- Also quality of these libraries is often substandard (they are usually not activly
- maintained after they provide functionality needed by thier authors - 
+ (because any change to them requires a lot of refactoring in several modules).
+ Also quality of these libraries is often substandard (they are usually not actively
+ maintained after they provide functionality needed by their authors - 
  if it works don't change it approach).
 
 I must admit that nowadays it is much more difficult to develop microservices
-vs monolith. But I belive this is caused mostly by lack of good 
+vs monolith. But I believe this is caused mostly by lack of good 
 frameworks and tools. For example I can imagine that in the future
 we will have some standard API for logging and monitoring offered by
 all relevant cloud providers. From my point of view Spring Boot framework
-looks very promising. Also I belive that we have only just started doing 
+looks very promising. Also I believe that we have only just started doing 
 cloud computing
 (it still a very young and immature technology) and we should see a lot of
 improvements in the area of distributed system development.
 
 To sum up: using modules is always a good idea. Depending on your
-requirements somtimes you will want to build a modular monolith, sometimes
+requirements sometimes you will want to build a modular monolith, sometimes
 a bunch of microservices. Context is always the king.
 
 ### Buzz
