Upgrade to Jekyll 3.7.4

--- a/_posts/2018-06-25-devoxx-poland-2018.md
+++ b/_posts/2018-06-25-devoxx-poland-2018.md
@@ -1,11 +1,12 @@
 ---
+author: mc
 layout: post
 cover: 'assets/images/devoxx_cover.jpeg'
 title: Devoxx Poland 2018
 date: 2018-06-25 00:00:00
 tags: devcon jvmbloggers 
 subclass: 'post tag-test tag-content'
-categories: 'mc'
+categories: mc
 navigation: True
 logo: 'assets/images/home.png'
 disqus: true
